@@ -425,7 +425,6 @@ public class SimpleTextTermVectorsReader extends TermVectorsReader {
 
     @Override
     public int nextPosition() throws IOException {
-      assert false;
       return -1;
     }
 
